<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="#8EAF9E">

    <ImageView
        android:id="@+id/imgPhoto_ItemRecycler"
        android:layout_width="74dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/profile_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtContactNameItem_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txtAddressItem_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPhoneItem_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />
</LinearLayout>
